# Hime

./: .env.example  .gitignore  ANALYSIS_v1.2.0.md  AUDIT_PLAN.md  AUDIT_REPORT.md  CHANGELOG.md  README.ja.md  README.md  REVIEW_REPORT.md  V121_HANDOFF.md  comparison-tab-prompt.md  dev.bat  devops-audit-prompt.md  training-improvements-plan.md
.github/: dependabot.yml
app/: .gitignore  CLAUDE.md  README.md  build.bat
app/backend/: .env.example  pyproject.toml  run.py
app/backend/app/: auth.py  config.py  database.py  inference.py  logger.py  main.py  models.py  schemas.py
app/backend/app/config/: __init__.py  _env.py  pipeline_v2.py
app/backend/app/core/: paths.py
app/backend/app/middleware/: audit.py  rate_limit.py
app/backend/app/pipeline/: __init__.py  dry_run.py  postprocessor.py  preprocessor.py  prompts.py  runner.py  runner_v2.py  stage2_merger.py  stage3_polish.py  stage4_aggregator.py  stage4_reader.py
app/backend/app/pipeline/stage1/: __init__.py  _types.py  adapter_gemma4.py  adapter_jmdict.py  adapter_llm_jp.py  adapter_qwen32b.py  adapter_qwen35_9b.py  adapter_translategemma.py  runner.py
app/backend/app/prompts/: consensus_merge.txt  llm-jp-3-7.2b_stage1.txt  merger_merge.txt  polish_stage3.txt  qwen_35_9b_stage1.txt  sarashina2_7b_stage1.txt  stage1_translate.txt  stage2_refine.txt  stage3_polish.txt  translategemma_12b_stage1.txt  verify_bilingual.txt
app/backend/app/prompts/readers/: reader_emotional_continuity.txt  reader_name_consistency.txt  reader_natural_flow.txt  reader_omissions.txt  reader_register.txt  reader_yuri_register.txt
app/backend/app/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  retriever.py  store.py  vault_exporter.py
app/backend/app/routers/: compare.py  data_registry.py  epub.py  flywheel.py  glossary.py  hardware.py  lexicon.py  models.py  pipeline.py  rag.py  review.py  texts.py  training.py  translations.py  verify.py
app/backend/app/services/: epub_export_service.py  epub_service.py  flywheel_service.py  glossary_service.py  hardware_monitor.py  lexicon_service.py  model_manager.py  reader_panel.py  training_monitor.py  training_runner.py  verification_service.py
app/backend/app/training/: __init__.py  curriculum.py  curriculum_callback.py
app/backend/app/utils/: ports.py  sanitize.py
app/backend/app/websocket/: streaming.py
app/backend/mcp_server/: hime_rag_mcp.py
app/backend/tests/: conftest.py  test_config_extra_env_vars.py  test_conftest_isolation.py  test_curriculum.py  test_curriculum_callback.py  test_data_registry.py  test_epub_path_traversal.py  test_epub_update.py  test_foreign_keys.py  test_glossary_service.py  test_hime_rag_mcp.py  test_import_chain.py  test_lexicon_service.py  test_model_inventory.py  test_model_manager.py  test_paragraph_retry_columns.py  test_path_security.py  test_path_validation.py  test_paths.py  test_paths_v121.py  test_pipeline.py  test_pipeline_confidence_log.py  test_pipeline_dry_run.py  test_pipeline_v2_config.py  test_preprocessor_v2.py  test_rag_chunker.py  test_rag_store_query.py  test_reader_panel.py  test_runner_v2.py  test_runner_v2_dry_run.py  test_runner_v2_helpers.py  test_runner_v2_retry_paths.py  test_runner_v2_stage4_load.py  test_sanitize.py  test_stage1_v2.py  test_stage23_v2.py  test_stage4_aggregator.py  test_stage4_aggregator_segment.py  test_stage4_config.py  test_stage4_reader.py  (+10 more)
app/backend/tests/e2e/: test_pipeline_dry_run_e2e.py  test_stage4_retry_e2e.py
app/backend/tests/fixtures/: sample_book.json  yuri_smoke_test_cases.json  yuri_smoke_test_glossary.json
app/backend/tests/integration/: test_router_epub.py  test_router_pipeline.py  test_router_rag.py  test_router_texts.py  test_router_translations.py
app/backend/tests/smoke/: test_qwen32b_prompts.py
app/backend/tests/unit/: test_pipeline_config.py  test_prompts.py
app/backend/unsloth_compiled_cache/: UnslothGRPOTrainer.py
app/frontend/src-tauri/: Cargo.toml  tauri.conf.json
app/frontend/src-tauri/capabilities/: default.json
app/frontend/src-tauri/icons/: icon.icns
app/frontend/src-tauri/src/: lib.rs  main.rs
data/: registry.jsonl
obsidian-vault/: _index.md
plans/: comparison-tab.md
prompts/: chart-fixes-prompt.md  training-improvements-prompt.md
scripts/: align_shuukura.py  analyze_training_data.py  build_backend.py  (+28 more)
(+448 files in other folders)
