[project]
name = "hime-backend"
version = "2.0.0"
description = "Hime – local-first Japanese-to-English light novel translation backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.30.0",
    "ebooklib>=0.20",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "psutil>=7.2.2",
    "nvidia-ml-py>=11.5.0",
    "mecab-python3>=1.0.9",
    "unidic-lite>=1.0.8",
    "jamdict>=0.1a11.post2",
    "jamdict-data>=1.5",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    # transformers required for Unsloth local inference (Stage 1B/1C/1D)
    # unsloth requires separate install: pip install "unsloth[cu124-torch260]"
    "transformers>=5.0.0",
    # huggingface_hub: model download / cache helpers for Stage 4 pipeline
    "huggingface_hub>=0.24.0",
    "mcp>=1.0.0",
    "qdrant-client>=1.9.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
downloads = [
    "huggingface_hub>=0.24.0",
]
vault = [
    "python-frontmatter>=1.1.0",
    "scikit-learn>=1.4.0",
    "transformers>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
