[package]
name = "hime"
version = "0.7.6"
description = "Hime — Local Japanese-to-English Translation Studio"
authors = []
edition = "2021"

[lib]
name = "hime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hime"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
