[package]
name = "hime"
version = "1.1.0"
description = "Hime — Local Japanese-to-English Translation Studio"
authors = []
edition = "2021"

[lib]
name = "hime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hime"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
